--- a/probability_counter/notebook/ApproximateCounting.ipynb
+++ b/probability_counter/notebook/ApproximateCounting.ipynb
@@ -16,24 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "import numpy as np\n",
     "import os\n",
-    "import collections\n",
+    "import sys\n",
     "import pandas as pd\n",
     "import time\n",
-    "import enum\n",
     "from matplotlib import pyplot as plt\n",
     "from pandas.api.types import is_numeric_dtype\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +340,6 @@
     "            for letter in self.text_data:\n",
     "                if letter in counters:\n",
     "                    k = counters[letter]\n",
-    "                    # prob_not_increase = 1 - 1/2**k\n",
     "                    prob_not_increase = 1 - (1/(np.sqrt(2)**(k)))\n",
     "                    # prob of increment is 1/sqrt(2)**k\n",
     "                else:\n",
@@ -362,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -371,18 +369,13 @@
      "text": [
       "Working on mais\n",
       "started ExactCounter\n",
-      "It took ( 0.1900477409362793 ) secs\n",
+      "It took ( 0.19294977188110352 ) secs\n",
       "started FixedProbCounter\n",
-      "It took ( 7.284914970397949 ) secs\n",
-      "started DecreasingProbCounter\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\iCETEE\\AppData\\Local\\Temp/ipykernel_12004/910344421.py:221: RuntimeWarning: overflow encountered in double_scalars\n",
-      "  prob_not_to_increase = 1 - (1/(np.sqrt(2)**(k)))\n"
+      "It took ( 6.638320684432983 ) secs\n",
+      "started DecreasingProbCounter\n",
+      "It took ( 85.40777087211609 ) secs\n",
+      "--------------------------------------\n",
+      "Done!!!\n"
      ]
     }
    ],
@@ -453,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,29 +484,40 @@
     "        mean_abserr = register[['fixed_Average', 'decrease_Average']\n",
     "                         ].subtract(register['exact'], axis=0).apply(np.abs)\n",
     "        mean_relerr = (mean_abserr.div(register['exact'], axis=0)*100).round(4)\n",
-    "\n",
     "        register['fixed_MeanAbsError'] = mean_abserr['fixed_Average']\n",
     "        register['decrease_MeanAbsError'] = mean_abserr['decrease_Average']\n",
     "        register['fixed_MeanRelError'] = mean_relerr['fixed_Average']\n",
     "        register['decrease_MeanRelError'] = mean_relerr['decrease_Average']\n",
+    "\n",
+    "        # get size of bytes to represent estimates\n",
+    "        register['exact_Bytes'] = register['exact'].apply(lambda k: np.ceil(np.log2(k)))\n",
+    "        register['fixed_Bytes'] = register['fixed_Average'].apply(lambda k: np.ceil(np.log2(k)))\n",
+    "        register['decrease_Bytes'] = register['decrease_Average'].apply(lambda k: np.ceil(np.log2(k)))\n",
+    "\n",
     "        # reorder columns\n",
-    "        cols = ['Letter', 'exact', 'exact_Percent',\\\n",
-    "                'fixed_Minimum', 'fixed_Maximum', 'fixed_Average', 'fixed_Average_Percent', 'fixed_STD', 'fixed_VAR', 'fixed_MeanAbsError', 'fixed_MeanRelError',\\\n",
-    "                'decrease_Minimum', 'decrease_Maximum', 'decrease_Average', 'decrease_Average_Percent', 'decrease_STD', 'decrease_VAR', 'decrease_MeanAbsError', 'decrease_MeanRelError',\n",
+    "        cols = ['Letter', 'exact', 'exact_Percent', 'exact_Bytes',\\\n",
+    "                'fixed_Minimum', 'fixed_Maximum', 'fixed_Average', 'fixed_Bytes', 'fixed_Average_Percent', 'fixed_STD', 'fixed_VAR', 'fixed_MeanAbsError', 'fixed_MeanRelError',\\\n",
+    "                'decrease_Minimum', 'decrease_Maximum', 'decrease_Average', 'decrease_Bytes', 'decrease_Average_Percent', 'decrease_STD', 'decrease_VAR', 'decrease_MeanAbsError', 'decrease_MeanRelError',\n",
     "                ]\n",
     "        register = register[cols]\n",
     "    else:  # counter\n",
+    "        # compute MAE and RE\n",
     "        mean_abserr = register[['fixed_Estimate', 'decrease_Estimate']].subtract(register['exact'], axis=0).apply(np.abs)\n",
     "        mean_relerr = (mean_abserr.div(register['exact'], axis=0)*100).round(4)\n",
-    "\n",
     "        register['fixed_MeanAbsError'] = mean_abserr['fixed_Estimate']\n",
     "        register['decrease_MeanAbsError'] = mean_abserr['decrease_Estimate']\n",
     "        register['fixed_MeanRelError'] = mean_relerr['fixed_Estimate']\n",
     "        register['decrease_MeanRelError'] = mean_relerr['decrease_Estimate']\n",
+    "\n",
+    "        # get size of bytes to represent estimates\n",
+    "        register['exact_Bytes'] = register['exact'].apply(lambda k: np.ceil(np.log2(k)))\n",
+    "        register['fixed_Bytes'] = register['fixed_Average'].apply(lambda k: np.ceil(np.log2(k)))\n",
+    "        register['decrease_Bytes'] = register['decrease_Average'].apply(lambda k: np.ceil(np.log2(k)))\n",
+    "\n",
     "        # reorder columns\n",
-    "        cols = ['Letter', 'exact', 'exact_Percent',\\\n",
-    "                'fixed_Minimum', 'fixed_Maximum', 'fixed_Average', 'fixed_Average_Percent', 'fixed_Estimate', 'fixed_STD', 'fixed_VAR', 'fixed_MeanAbsError', 'fixed_MeanRelError',\\\n",
-    "                'decrease_Minimum', 'decrease_Maximum', 'decrease_Average', 'decrease_Average_Percent', 'decrease_Estimate', 'decrease_STD', 'decrease_VAR', 'decrease_MeanAbsError', 'decrease_MeanRelError',\n",
+    "        cols = ['Letter', 'exact', 'exact_Percent', 'exact_Bytes',\\\n",
+    "                'fixed_Minimum', 'fixed_Maximum', 'fixed_Average', 'fixed_Bytes', 'fixed_Average_Percent', 'fixed_Estimate', 'fixed_STD', 'fixed_VAR', 'fixed_MeanAbsError', 'fixed_MeanRelError',\\\n",
+    "                'decrease_Minimum', 'decrease_Maximum', 'decrease_Average', 'decrease_Bytes','decrease_Average_Percent', 'decrease_Estimate', 'decrease_STD', 'decrease_VAR', 'decrease_MeanAbsError', 'decrease_MeanRelError',\n",
     "                ]\n",
     "        register = register[cols]\n",
     "\n",
@@ -523,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -836,25 +840,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr = [np.floor(np.log2(_+1)) for _ in range(1,50+1)]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15f886a7640>]"
+       "[<matplotlib.lines.Line2D at 0x27db529f580>]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -872,15 +867,9 @@
     }
    ],
    "source": [
-    "plt.plot(arr)"
+    "arr = [np.floor(np.log2(_+1)) for _ in range(1,50+1)]\n",
+    "plt.plot(arr)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
