--- a/frequent_counter/latex_presentation/Ablordeppey.tex
+++ b/frequent_counter/latex_presentation/Ablordeppey.tex
@@ -121,8 +121,9 @@
 		\begin{itemize}
 			\setlength\itemsep{1em}
 			\item \textbf{shakespeare directory} :- This folder hosts two (2) literary works of Shakespeare considered in this project. In total, the folder has $2\cdot 3=6$ literary works since each work has translations in English, French and German. For instance, Hamlet has variations, \textit{hamlet-english, hamlet-french} and \textit{hamlet-german}.
+			\item \textbf{output directory} :- This directory contains the output register (in csv) for all valid tokens in the considered literary works ordered by their corresponding counter values in descending order. The corresponding counter value for each token was also recorded in brackets next to the token. \\
 			
-			\item \textbf{output directory} :- This directory contains the output register (in csv) for all literary works under consideration. Each register has one-hundred and four (104) columns. The first column corresponds to the \textit{rank} of each unique word presented by the counters. The first counter considered was the exact counter which counts the exact number of occurrences of each word in the literary work ranked in descending order. The remaining one hundred and two (102) columns after the exact prefixed with a \textit{k} holds the most frequent words in the literary work presented in descending order computed using the \textbf{Misra \& Reis} \cite{misra_gries} frequency counter for one-hundred \textit{k}'s. The domain of the first 100 \textit{k}'s are even numbers ranging from $(2-200)$. In addition to this range, $k=\lfloor \frac{n}{2} \rfloor$ and $k=n$ were considered as presented in each register. The goal for considering varying values of \textit{k} is to clearly understand the trend of output for every different \textit{k}. The word with rank of one (1) for any counter corresponds to the first most frequent word for that counter, rank two (2) corresponds to the second most frequent and so on for that counter under study.\\
+			Each register has one-hundred and four (104) columns. The first column corresponds to the \textit{rank} of each unique word presented by the counters. The first counter considered was the exact counter which counts the exact number of occurrences of each word in the literary work ranked in descending order. The remaining one hundred and two (102) columns after the exact prefixed with a \textit{k} holds the most frequent words in the literary work presented in descending order computed using the \textbf{Misra \& Reis} \cite{misra_gries} frequency counter for one-hundred \textit{k}'s. The domain of the first 100 \textit{k}'s are even numbers ranging from $(2-200)$. In addition to this range, $k=\lfloor \frac{n}{2} \rfloor$ and $k=n$ were considered as presented in each register. The goal for considering varying values of \textit{k} is to clearly understand the trend of output for every different \textit{k}. The word with rank of one (1) for any counter corresponds to the first most frequent word for that counter, rank two (2) corresponds to the second most frequent and so on for that counter under study.\\
 			
 			There are $6$ csv registers/files in this directory. For instance, the files as shown for the output directory in Fig. \ref{figure:projectDirectoryStructure} is the output registers for hamlet-english literary work only.
 			
