--- a/k-center problem/latex_presentation/references.bib
+++ b/k-center problem/latex_presentation/references.bib
@@ -21,6 +21,28 @@
 	year={1959}
 }
 
+@inproceedings{hui2010study,
+	title={Study of heuristic search and exhaustive search in search algorithms of the structural learning},
+	author={Hui, Liu and Yonghui, Cao},
+	booktitle={2010 Second International Conference on Multimedia and Information Technology},
+	volume={1},
+	pages={169--171},
+	year={2010},
+	organization={IEEE}
+}
+
+
+@inbook{powerset_generation,
+	author = {Djokić, Borivoje and Miyakawa, Masahiro and Sekiguchi, Satoshi and Semba, Ichiro and Stojmenović, Ivan},
+	year = {2006},
+	month = {01},
+	pages = {76-85},
+	title = {Parallel algorithms for generating subsets and set partitions},
+	volume = {450},
+	isbn = {978-3-540-52921-7},
+	doi = {10.1007/3-540-52921-7_57}
+}
+
 
 @unknown{kcenterProblem,
 	author = {Padh, Kirtan},
@@ -41,4 +63,23 @@
 	doi = {https://doi.org/10.1016/0304-3975(85)90224-5},
 	url = {https://www.sciencedirect.com/science/article/pii/0304397585902245},
 	author = {Teofilo F. Gonzalez}
+}
+
+
+@article{horvitz1952generalization,
+	title={A generalization of sampling without replacement from a finite universe},
+	author={Horvitz, Daniel G and Thompson, Donovan J},
+	journal={Journal of the American statistical Association},
+	volume={47},
+	number={260},
+	pages={663--685},
+	year={1952},
+	publisher={Taylor \& Francis}
+}
+
+@article{greenhoe2016properties,
+	title={Properties of distance spaces with power triangle inequalities},
+	author={Greenhoe, Daniel J},
+	journal={arXiv preprint arXiv:1610.07594},
+	year={2016}
 }
